# composable-llm

./: .gitignore  README.md  TODO.md  TODOs.md  adaption_speed.py  adaption_speed_with_good_plot.py  calc_entropy.py  check_exp_integrity.py  default_config.ini  entropy_via_compression.py  estimate_entropys.py  estimate_fair_alpha.py  estimate_fair_alpha_DBN.py  exp_plots.py  exp_plots2.py  gssm.py  gssm_as_hmm.py  hidden_markov_model.py  hmm_vivien.py  latent_study.py  pyproject.toml  test_hmm.py  train.py  user_config.ini  utils.py  wip_entropy.py
apps/: config.yaml  debug_config.yaml  train.py
model/: blocklm.py  feedforward.py  norm.py  transformer.py
src/apps/: debug_config.yaml  train.py
src/apps/experiment1/: README.md  difficuly.yaml  small_X.yaml  small_Z.yaml
src/apps/gssm/: choose_difficulty.py  data.py  debug_config.yaml  difficulty.py  entropy.py  entropy_launcher.py  evaluation.py  gzip_launcher.py  hidden_markov_model.py  launcher_entropy.py  launcher_gzip.py  train.py  train_on_fly.py  train_onfly.py
src/apps/gssm/configs/: base.yaml  data.yaml  debug.yaml  debug_eval.yaml  debug_grid.yaml  dense.yaml  difficulty.yaml  grid.yaml  low_entropy.yaml  onfly10.yaml  onfly10_correction.yaml  onfly11.yaml  onfly11_correction.yaml  sparse.yaml
src/apps/gssm/configs/debug/: data.yaml  difficulty.yaml  entropy.yaml  eval.yaml  grid.yaml  onfly.yaml  train.yaml
src/apps/gssm/experiment1/: README.md  data.yaml  difficulty.sh  onfly_small_X.yaml  onfly_small_Z.yaml
src/apps/gssm/experiment4/: README.md
src/apps/gssm/experiment5/: README.md
src/apps/gssm/extra/: adaption_speed.py  estimate_fair_alpha.py  estimation_acc_with_ndata.py  exp_baseline_plots.py  exp_plots.py  test_hmm.py
src/apps/gssm/script/: difficulty.sh
src/apps/gssm/scripts/: difficulty.sh
src/apps/gssm_onfly/: train.py
src/apps/gssm_onfly/configs/: debug.yaml  debug_grid.yaml
src/apps/homework/: config.yaml  train.py
src/apps/mamba/: onfly.yaml  train_onfly.py
src/apps/old_gssm/: data.py  difficulty.py  train_onfly.py
src/apps/ssm/: hawk.py  mamba.py  mingru.py  minlstm.py  rnn.py
src/apps/ssm/configs/: mamba.yaml  rnn.yaml
src/apps/vanilla/: config.yaml  debug_config.yaml  generate.py  tmp.py  train.py
src/apps/vanilla/internal/: eval.py  mpu_utils.py
src/composition/: checkpoint.py  cluster.py  computing.py  data.py  data_gssm.py  distributed.py  model.py  monitor.py  optim.py  path.py  stool.py  train.py  utils.py  wandb.py
src/composition/data/: __init__.py  gssm.py  vanilla.py
src/composition/data_generation/: hmm.py
src/composition/train/: train.py
src/nanollama/: __init__.py  distributed.py  launcher.py  optim.py  stool.py  train.py  utils.py  visualization.py
src/nanollama/cluster/: __init__.py  cluster.py  distributed.py  os_environment.py  slurm.py  utils.py
src/nanollama/data/: __init__.py  file.py  gssm.py  hdf5.py  loader.py  old_gssm.py  text.py  tokenizer.py
src/nanollama/model/: __init__.py  blocklm.py  feedforward.py  mamba.py  norm.py  rnn.py  transfomer.py
src/nanollama/model/mamba/: causal_conv1d_compilable.py  core_mamba.py  mamba.py  ssm_compilable.py
src/nanollama/model/ssm/: __init__.py  causal_conv1d_compilable.py  compilable_scan.py  hawk.py  mamba.py  mingru.py  minlstm.py  rnn_common.py  rnn_utils.py  ssm_compilable.py  utils_mamba.py  utils_rnn.py  wrapper_causal_conv1d.py  wrapper_scan.py
src/nanollama/monitor/: __init__.py  checkpoint.py  logger.py  logging.py  monitor.py  orchestrator.py  preemption.py  profiler.py  utility.py  wandb.py
(+223 files in other folders)
