[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nanollama"
version = "0.0.0"
authors = [
  { name="Vivien Cabannes", email="vivien.cabannes@gmail.com" },
]
description = "Get started with LLMs on math tasks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    # essential
    "numpy",
    "scipy",
    "torch",

    # argument parsing
    "omegaconf",

    # logging
    "wandb",

    # profiling,
    "torch_tb_profiler",

    # transformer libraries
    # "sentencepiece",
    # "tiktoken",
    # "transformers",

    # visualization
    "ipykernel",
    "ipywidgets",
    "matplotlib",
    "plotly",
    "viztracer",

    # formatting
    "ruff",
]

[project.urls]
"Homepage" = "https://github.com/fairinternal/composable-llm/"
"Bug Tracker" = "https://github.com/fairinternal/composable-llm/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["src.apps"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
  "E", "F", "W",  # Default rules
  # "ANN001",     # Function arguments should annotate types
  # "ANN201",     # Public function should annotate return type
  "B",            # Common bugs
  "DTZ",          # Timezone issues
  "I",            # Sort inputs
  "PLE",          # Common errors
  "RUF100",       # Remove unused noqa
  "UP",           # Modern syntax
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]